--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   flutter:
     sdk: flutter
 
+  youtube_player_flutter: ^8.0.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
