--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_map: ^1.1.1
-  charts_flutter_new: ^0.12.0
+  line_chart: ^1.0.9
+  pie_chart: ^5.3.2
 
 dev_dependencies:
   flutter_test:
