--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_map: ^1.1.1
   charts_flutter_new: ^0.12.0
+  web_socket_channel: ^2.2.0
 
 dev_dependencies:
   flutter_test:
