--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
 
   youtube_player_flutter: ^8.0.0
+  sqflite: 
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -44,9 +45,6 @@ dependencies:
   line_chart: ^1.0.9
   pie_chart: ^5.3.2
   socket_io_client: ^2.0.0-beta.2
-  firebase_core: ^0.4.2+2
-  firebase_messaging: ^6.0.16
-  overlay_support: ^2.1.0
 
 
 dev_dependencies:
