--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   line_chart: ^1.0.9
   pie_chart: ^5.3.2
   socket_io_client: ^2.0.0-beta.2
+  http:
+  overlay_support:
+  geocoding:
+  geolocator:
 
 dev_dependencies:
   flutter_test:
