--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -49,7 +49,8 @@ dependencies:
   overlay_support:
   geocoding:
   geolocator:
-  firebase_core:
+  firebase_core: ^2.3.0
+  cloud_firestore: 
 
 dev_dependencies:
   flutter_test:
